# Rustume

./: .gitignore  README.md
rustume/: Cargo.toml  Makefile.toml
rustume/src/: api.rs  app.rs  lib.rs  routes.rs  types.rs
rustume/src/components/: mod.rs
rustume/src/components/body/: mod.rs
rustume/src/components/body/cards/: contact_card.rs  education_card.rs  experience_card.rs  mod.rs  profile_card.rs  skill_card.rs  summary_card.rs
rustume/src/components/body/containers/: education_container.rs  experience_container.rs  mod.rs  profile_contact_container.rs  skills_container.rs  summary_container.rs
rustume/src/components/body/footer/: footer.rs  mod.rs
rustume/src/components/body/header/: mod.rs  navbar.rs
rustume/src/components/body/lists/: mod.rs  profile_preference_list.rs  social_list.rs
rustume/src/pages/: index.rs  mod.rs
rustume/static/: index.html
rustume/static/css/: bootstrap.css
rustume/static/json/resume/: resume.json
