[package]
name = "rustume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14"
wasm-bindgen = "0.2"
anyhow = "1.0.32"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0" }
